<resources>
    <string name="app_name">CustomCalendar</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thru">Thru</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>


    <string name="jan">January</string>
    <string name="feb">February</string>
    <string name="mar">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="aug">August</string>
    <string name="sep">September</string>
    <string name="oct">October</string>
    <string name="nov">November</string>
    <string name="dec">December</string>
</resources>